# fastpy

./: .fastpy.toml  .gitignore  Cargo.toml  README.md
src/: main.rs
