[package]
name = "fastpy"
version = "0.1.0"
edition = "2024"

[dependencies]
tree-sitter = "0.20.0"
tree-sitter-python = "0.20.0"
clap = { version = "4.0", features = ["derive"] }
rayon = "1.7" # for parallel processing
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.14.0"
walkdir = "2.5.0"
serde_json = "1.0.140"
log = "0.4.27"
env_logger = "0.11.8"
